--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="content""></h1>
+    <div class="container">
+    <h1 class="content" id="content""></h1>
+    <div class="buttons-container">
+        <button class="button" onclick="handleYes()">yes</button>
+        <button class="button" onclick="handleNo()">no</button>
+    </div>
+</div>
 </body>
 <script src="scripts.js">
     </script>
